--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "tsx watch src/index.ts"
+        "dev": "tsx watch src/index.ts",
+        "test": "jest"
     },
     "keywords": [],
     "author": "",
@@ -15,5 +16,10 @@
         "reflect-metadata": "^0.2.2",
         "tsyringe": "^4.8.0",
         "zod": "^3.23.4"
+    },
+    "devDependencies": {
+        "@types/jest": "^29.5.12",
+        "jest": "^29.7.0",
+        "ts-jest": "^29.1.2"
     }
 }
